Work with Logging & start With Regestration

--- a/SurveyBasket.API/appsettings.Development.json
+++ b/SurveyBasket.API/appsettings.Development.json
@@ -1,8 +1,39 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "ConnectionStrings": {
+        "DefaultConnection": "Host=localhost;Port=5432;Database=SurveyBasketDb;Username=postgres;Password=2003"
+    },
+
+    "Serilog": {
+        "MinimumLevel": {
+            "Default": "Information",
+            "Override": {
+                "Microsoft.AspNetCore": "Warning"
+            }
+        },
+        "WriteTo": [
+            {
+                "Name": "File",
+                "Args": {
+                    "Path": "F:\\.NET study\\Projects\\SurveyBasket\\SurveyBasket\\Logs\\log-.txt",
+                    "rollingInterval": "Day",
+                    "formatter": "Serilog.Formatting.Json.JsonFormatter"
+                }
+
+            }
+        ],
+        "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ],
+        "Properties": {
+            "ApplicationName": "SurveyBasket"
+        }
+    },
+
+    "AllowedHosts": "*",
+
+    "Jwt": {
+        "key": "",
+        "Issuer": "SurveyBasketAPI",
+        "Audience": "SurveyBasketClient",
+        "ExpiryMinutes": 30
     }
-  }
+
 }
