--- a/SurveyBasket.API/appsettings.json
+++ b/SurveyBasket.API/appsettings.json
@@ -2,17 +2,41 @@
     "ConnectionStrings": {
         "DefaultConnection": "Host=localhost;Port=5432;Database=SurveyBasketDb;Username=postgres;Password=2003"
     },
-    "Logging": {
-        "LogLevel": {
+   
+    "Serilog": {
+        "MinimumLevel": {
             "Default": "Information",
-            "Microsoft.AspNetCore": "Warning"
+            "Override": {
+                "Microsoft.AspNetCore": "Warning"
+            }
+        },
+        "WriteTo": [
+            {
+                "Name": "Console"
+            }
+            //{
+            //    "Name": "File",
+            //    "Args": {
+            //        "Path": "F:\\.NET study\\Projects\\SurveyBasket\\SurveyBasket\\Logs\\log-.txt",
+            //        "rollingInterval": "Day",
+            //        "formatter": "Serilog.Formatting.Compact.CompactJsonFormatter,Serilog.Formatting.Compact"
+            //    }
+
+            //}
+        ],
+        "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ],
+        "Properties": {
+            "ApplicationName": "SurveyBasket"
         }
     },
+
     "AllowedHosts": "*",
+    
     "Jwt": {
         "key": "",
         "Issuer": "SurveyBasketAPI",
         "Audience": "SurveyBasketClient",
         "ExpiryMinutes": 30
     }
+    
 }
