work with registration

--- a/SurveyBasket.API/appsettings.json
+++ b/SurveyBasket.API/appsettings.json
@@ -2,7 +2,7 @@
     "ConnectionStrings": {
         "DefaultConnection": "Host=localhost;Port=5432;Database=SurveyBasketDb;Username=postgres;Password=2003"
     },
-   
+
     "Serilog": {
         "MinimumLevel": {
             "Default": "Information",
@@ -31,12 +31,22 @@
     },
 
     "AllowedHosts": "*",
-    
+
     "Jwt": {
         "key": "",
         "Issuer": "SurveyBasketAPI",
         "Audience": "SurveyBasketClient",
         "ExpiryMinutes": 30
+    },
+    "MailSettings": {
+        "Host": "smtp.gmail.com",
+        "Port": 587,
+        "Username": "abdullahrezkelkashlan@gmail.com",
+        "Password": "",
+        "EnableSsl": true,
+        "FromEmail": "abdullahrezkelkashlan@gmail.com",
+        "FromName": "SurveyBasket"
     }
-    
+
+
 }
