--- a/SurveyBasket.API/appsettings.json
+++ b/SurveyBasket.API/appsettings.json
@@ -1,13 +1,15 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection": "Host=localhost;Port=5432;Database=SurveyBasketDb;Username=postgres;Password=2003"
+        "DefaultConnection": "Host=localhost;Port=5432;Database=SurveyBasketDb;Username=postgres;Password=2003",
+        "HangfireConnection": "Host=localhost;Port=5432;Database=SurveyBasketJobs;Username=postgres;Password=2003"
     },
 
     "Serilog": {
         "MinimumLevel": {
             "Default": "Information",
             "Override": {
-                "Microsoft.AspNetCore": "Warning"
+                "Microsoft.AspNetCore": "Warning",
+                "Hangfire": "Information"
             }
         },
         "WriteTo": [
@@ -38,6 +40,7 @@
         "Audience": "SurveyBasketClient",
         "ExpiryMinutes": 30
     },
+
     "MailSettings": {
         "Host": "smtp.gmail.com",
         "Port": 587,
