protect hangfire dashborad

--- a/SurveyBasket.API/appsettings.json
+++ b/SurveyBasket.API/appsettings.json
@@ -49,6 +49,11 @@
         "EnableSsl": true,
         "FromEmail": "abdullahrezkelkashlan@gmail.com",
         "FromName": "SurveyBasket"
+    },
+
+    "HangfireSettings": {
+        "UserName":  "",
+        "Password":  ""
     }
 
 
