--- a/SurveyBasket.BLL/SurveyBasket.BLL.csproj
+++ b/SurveyBasket.BLL/SurveyBasket.BLL.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="FluentValidation" Version="10.0.4" />
     <PackageReference Include="FluentValidation.AspNetCore" Version="10.0.4" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="10.0.4" />
+    <PackageReference Include="Hangfire.Core" Version="1.8.23" />
     <PackageReference Include="Mapster" Version="7.0.0" />
     <PackageReference Include="Mapster.DependencyInjection" Version="1.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.0" />
