add notification service for open Polls

--- a/SurveyBasket.API/appsettings.json
+++ b/SurveyBasket.API/appsettings.json
@@ -52,8 +52,12 @@
     },
 
     "HangfireSettings": {
-        "UserName":  "",
-        "Password":  ""
+        "UserName": "",
+        "Password": ""
+    },
+
+    "AppURL": {
+        "baseUrl": "http://localhost:5001"
     }
 
 
