--- a/SurveyBasket.BLL/SurveyBasket.BLL.csproj
+++ b/SurveyBasket.BLL/SurveyBasket.BLL.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="Mapster" Version="7.0.0" />
     <PackageReference Include="Mapster.DependencyInjection" Version="1.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.0" />
+    <PackageReference Include="System.Linq.Dynamic.Core" Version="1.7.1" />
   </ItemGroup>
 
   <ItemGroup>
